# esercitazioni_PCS

./: prova.txt
esercitazione1/: CMakeLists.txt  prova_compilazione.cpp
esercitazione2/: CMakeLists.txt  double.cpp  double2.cpp  esercizio1.txt
esercitazione3/: CMakeLists.txt
esercitazione4/: CMakeLists.txt  test_bubble.cpp  test_insertion.cpp  test_selection.cpp
esercitazione5/: CMakeLists.txt  osservazioni.txt  test_merge.cpp  test_quick.cpp
esercitazione6/: CMakeLists.txt  main.cpp  undirected_edge.hpp  undirected_graph.hpp
esercitazione_1/: medie.cpp
